<resources>
    <string name="app_name">Yabi</string>
    <string name="action_settings">Settings</string>
    <string name="share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_update_profile">UpdateProfile</string>


    <!-- Font Constants -->
    <string name="path_assets_fonts">fonts/</string>
    <string name="font_roboto_light">Roboto-Light.ttf</string>
    <string name="font_roboto_bold">Roboto-Bold.ttf</string>
    <string name="font_roboto_regular">Roboto-Regular.ttf</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="send_new_code">Resend</string>
    <string name="cont">Verify</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_yabi">Welcome to Yabi</string>
    <string name="cont_with">Continue with</string>
    <string name="nmste">Namaste!!!</string>
    <string name="tellus">Tell us a bit about yourself</string>
    <string name="hnt_name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="submit_txt">Submit</string>
    <string name="update_txt">Update Profile</string>
    <string name="retry_txt">Retry</string>
    <string name="dob_txt">Date of Birth</string>
    <string name="email_txt">Email Id</string>
    <string name="coupon_use">Use Coupon</string>
    <string name="ofr_avail">to avail the offer.</string>
    <string name="last_txt">Last Name</string>
    <string name="first_txt">First Name</string>
    <string name="bst_exp_txt">For the best experience,</string>
    <string name="cmplt_prfl_txt">Please complete your profile</string>
    <string name="gt_strtd">"Let\'s get started"</string>
    <string name="get_strtd">Get Started"</string>
    <string name="next_btn">Next"</string>
    <string name="start">START"</string>
    <string name="skip">SKIP"</string>
    <string name="mobile_signin"><a href="">sign in with mobile number</a></string>
    <string name="no_internet">No Internet"</string>
    <string name="or">Or"</string>
    <string name="facebook_app_id">1847052415542136</string>
    <string name="slide_1_title">Discover</string>
    <string name="slide_1_desc">Discover new deals and exclusive offer everyday</string>
    <string name="slide_2_title">Cashback</string>
    <string name="slide_2_desc">Earn extra cashback on your favourite sites and save more</string>
    <string name="slide_3_title">Earn Points</string>
    <string name="slide_3_desc">Earn extra points by simple check-ins at your favourite places</string>
    <string name="slide_4_title">Personal Assistant</string>
    <string name="slide_4_desc">No need to search, Yabi will do that for you</string>
    <string name="pinky_promise">We\'ll never spam, pinky promise ;)</string>
    <string name="sign_mob_no">Enter your mobile number</string>
    <string name="hnt_phone_number">Phone Number</string>
    <string name="btn_get_started">Get Started</string>
    <string name="entr_code">Verification code sent to</string>
    <string name="no_ofr_view">No Offer Found</string>
    <string name="no_ofr_subview">Simply browse, create a wishlist</string>
    <string name="no_ofr_subsubview">or make a purchase</string>
    <string name="terms_link1">By proceeding, you agree to our</string>
    <string name="terms_link2"><a href="">Terms and Conditions</a></string>
    <string name="otp_smt_terms_link1">Didn\'t receive sms?</string>
    <string name="otp_smt_terms_link2">and <a href="">cookie use</a></string>
    <string name="deep_link_share">and <a href="fxwj.app.link/TIoaSxzDCy">Share Link</a></string>
    <string name="title_activity_coach">CoachActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Home Screen -->
    <string name="string_online_deals">Online Deals</string>
    <string name="string_offline_deals">Offline Deals</string>
    <string name="string_no_merchants">Sorry there are no merchants currently</string>
    <string name="string_save_coupon">Save</string>
    <string name="string_remove_coupon">Remove</string>
    <string name="text_no_favourites">Sorry, there are no favourites saved.</string>
    <string name="title_activity_favourites">FavouritesActivity</string>
    <string name="gcm_id">id:1073204284509</string>
    <string name="no_internet_title">Oh no!!</string>
    <string name="no_internet_desc">No Internet found.\nCheck your connection or\ntry again</string>
    <string name="error_title">Something went wrong!!</string>
    <string name="error_desc">Something went wrong!!\nPlease click on retry button to\n Try Again</string>



    <!-- Drawer Items -->
    <string name="drawer_home">Home</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_saved_deals">Saved Deals</string>
    <string name="drawer_refer">Share</string>
    <string name="drawer_rate">Rate us</string>
    <string name="drawer_feedback">Feedback</string>
    <string name="drawer_faq">FAQ</string>
    <string name="title_activity_refer">Refer</string>


    <string name="input_hint">Message..</string>
    <string name="unknown">Unknown</string>


    <!-- Default setting for demo-->
    <string name="default_text_short">Hello!!</string>
    <string name="default_text_long">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </string>
    <string name="default_time_text">10:30 AM</string>
    <string name="default_date_cell_text">2016/08/08</string>
    <string name="default_user_name_1">Michael</string>
    <string name="default_user_name_2">Alice</string>

    <!--for widget-->
    <string name="widget_title">Yabi Offers</string>
    <string name="accessibility_service_description">accessibility service</string>

</resources>
