<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/noOfferView"
    android:layout_gravity="center"
    android:background="#f1f1f1"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/no_offer"
        android:id="@+id/noOfferImage"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/noOfferTv"
        android:layout_below="@+id/noOfferImage"
        android:textStyle="bold"
        android:textColor="@color/md_black_1000"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:text="@string/no_ofr_view"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/noOfferSubTv"
        android:textColor="#888888"
        android:layout_below="@+id/noOfferTv"
        android:layout_marginTop="@dimen/margins_10"
        android:layout_centerHorizontal="true"
        android:text="@string/no_ofr_subview"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#888888"
        android:layout_below="@+id/noOfferSubTv"
        android:layout_marginTop="@dimen/margins_5"
        android:id="@+id/noOfferSubSubTv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/no_ofr_subsubview"/>
</RelativeLayout>