<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_fb_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yabi.yabiuserandroid.FbLoginActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/default_background_color"
            android:popupTheme="@style/ToolbarColoredBackArrowDark"
            android:theme="@style/ToolbarColoredBackArrowDark"
            app:theme="@style/ToolbarColoredBackArrowDark">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_yabi"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="150dp"
            android:text="@string/cont_with"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/fb_login"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_btn_facebook"
            android:textAllCaps="false"
            android:onClick="fbLogin"
            android:text="Facebook"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orTv"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/margins_20"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/or" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mobile_signin"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/margins_20"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:text="@string/mobile_signin" />

    </LinearLayout>

</RelativeLayout>
