<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.yabi.yabiuserandroid.fragments.SigninProfileFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context=".fragments.UpdateProfileActivityFragment">

        <include
            android:id="@+id/noInternet"
            layout="@layout/layout_no_internet" />

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45"
            android:orientation="vertical"
            tools:context=".fragments.UpdateProfileActivityFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:background="@color/profile_bg"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margins_40"
                        android:gravity="center_horizontal"
                        android:text="@string/welcome"
                        android:textColor="@color/white"
                        android:textSize="35sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_horizontal"
                        android:text="@string/tellus"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-60dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/male_btn"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@color/default_transparent_color"
                        android:src="@drawable/male_user_disabled" />

                    <ImageButton
                        android:id="@+id/male_tick"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="-15dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/default_transparent_color"
                        android:src="@drawable/selection"
                        android:visibility="invisible" />

                    <ImageView
                        android:layout_gravity="center"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/orbtn"
                        android:layout_marginRight="@dimen/margins_15"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        />

                    <ImageButton
                        android:id="@+id/female_btn"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@color/default_transparent_color"
                        android:src="@drawable/female_user_disabled" />

                    <ImageButton
                        android:id="@+id/female_tick"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="-15dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/default_transparent_color"
                        android:src="@drawable/selection"
                        android:visibility="invisible" />

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margins_10"
            android:layout_weight="0.55"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1">

                    <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontEditTextView
                        android:id="@+id/fNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginRight="10dp"
                        android:hint="@string/first_txt"
                        android:inputType="textPersonName"
                        android:paddingLeft="20dp"
                        android:textColorHint="@color/color_primary_hint_text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1">

                    <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontEditTextView
                        android:id="@+id/lNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginRight="10dp"
                        android:hint="@string/last_txt"
                        android:inputType="textPersonName"
                        android:paddingLeft="20dp"
                        android:textColorHint="@color/color_primary_hint_text" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontEditTextView
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/nameLl"
                    android:hint="@string/email_txt"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:textColorHint="@color/color_primary_hint_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontEditTextView
                    android:id="@+id/dobEt"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/emailEt"
                    android:focusable="false"
                    android:hint="@string/dob_txt"
                    android:inputType="date"
                    android:paddingLeft="20dp"
                    android:textColorHint="@color/color_primary_hint_text" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/submitBtn"
                android:layout_width="250dp"
                android:layout_height="44dp"
                android:layout_below="@+id/sexRg"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_next_edited_drawable"
                android:text="@string/submit_txt"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>