

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    tools:context="com.yabi.yabiuserandroid.fragments.OtpValidationFragment">

    <include
        android:id="@+id/noInternet"
        layout="@layout/layout_no_internet"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:padding="@dimen/margins_20"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/entr_code"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contact_number"
            android:gravity="center"
            android:textSize="18sp"
            />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:padding="@dimen/margins_20"
        android:weightSum="1">
        <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontEditTextView
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:id="@+id/otp1"
            android:layout_marginRight="@dimen/margins_5"
            android:textSize="16sp"
            android:inputType="number"
            android:gravity="center"
            android:background="@drawable/otp_et_bg"
            />
        <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontEditTextView
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_marginRight="@dimen/margins_5"
            android:id="@+id/otp2"
            android:textSize="16sp"
            android:gravity="center"
            android:inputType="number"
            android:background="@drawable/otp_et_bg"

            />
        <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontEditTextView
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:id="@+id/otp3"
            android:layout_marginRight="@dimen/margins_5"
            android:gravity="center"
            android:textSize="16sp"
            android:inputType="number"
            android:background="@drawable/otp_et_bg"
            />
        <com.yabi.yabiuserandroid.ui.uiutils.palette.CustomFontEditTextView
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:textColorHint="@color/color_primary_hint_text"
            android:id="@+id/otp4"
            android:textSize="16sp"
            android:inputType="number"
            android:gravity="center"
            android:background="@drawable/otp_et_bg"
            />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margins_60"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/otp_smt_terms_link1"
            />
         <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resendOtp"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:layout_marginLeft="5dp"
                android:textColor="@color/color_primary"
                android:text="@string/send_new_code"
             />
        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/btn_send_new_code"-->
            <!--android:text="@string/send_new_code"-->
            <!--android:layout_marginLeft="-3dp"-->
            <!--android:layout_marginTop="@dimen/margins_5"-->
            <!--android:textSize="15sp"-->
            <!--style="?android:attr/borderlessButtonStyle"-->
            <!--android:layout_marginBottom="@dimen/margins_5"-->
            <!--android:background="#f6f6f6"-->
            <!--android:layout_gravity="center"/>-->
        </LinearLayout>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_continue"
            android:text="@string/cont"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/margins_20"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/bg_next_edited_drawable"
            android:layout_gravity="center"/>

    </LinearLayout>

</FrameLayout>
